Implementação de Divs

--- a/index.html
+++ b/index.html
@@ -3,28 +3,36 @@
     <head>
         <meta charset="utf-8">
         <title>
-            Meu primeiro site porno.
+            FiberFast
         </title>
     </head>
     <body>
-        <!-- Comentário -->
-        <h1>
-            Como fazer um título
-        </h1>
-        <p>
-            <strong>Lorem</strong> ipsum dolor sit amet consectetur adipisicing elit. 
-            Mollitia illum consectetur corrupti eveniet expedita vel repellat, unde totam voluptas explicabo nisi eius impedit. 
-            Dolorem iure voluptates eum labore ullam laudantium.
-        </p>
-        <h2>
-            Dale Lorem
-        </h2>
-        <p> A linguagem <a href="https://html.spec.whatwg.org/"  target="_blank">HTML</a> é uma linguagem <strong>de marcação</strong>. 
-        </p>
-
-        <h2>
-            Dale Mia
-        </h2> 
-        <img src="mia.jpg" alt="Uma moça independente" width="100" height="100"> 
+        <!-- Div cabeçalho principal -->
+        <div id="cabecalho-principal">
+            <h1>
+                Como funciona a Fiber?
+            </h1>
+            <p>
+                <strong>Lorem</strong> ipsum dolor sit amet consectetur adipisicing elit. 
+                Mollitia illum consectetur corrupti eveniet expedita vel repellat, unde totam voluptas explicabo nisi eius impedit. 
+                Dolorem iure voluptates eum labore ullam laudantium.
+            </p>
+        </div>
+        <!-- Div principal -->
+        <div id="principal">
+            <h2>
+                Que linguagem utilizamos?
+            </h2>
+            <p> A linguagem <a href="https://html.spec.whatwg.org/"  target="_blank">HTML</a> é uma linguagem <strong>de marcação</strong>. 
+            </p>
+    
+            <h2>
+                Dale Mia
+            </h2> 
+            <img src="mia.jpg" alt="Uma moça independente" width="100" height="100"> 
+        </div>
+        <footer> 
+            <p>Entre em <a href="contato.html">contato</a> conosco.</p> 
+        </footer>
     </body>
 </html>
